--- a/infrastructure/man/man1/dpb.1
+++ b/infrastructure/man/man1/dpb.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dpb.1,v 1.2 2010/08/20 14:09:59 espie Exp $
+.\"	$OpenBSD: dpb.1,v 1.3 2010/08/23 19:08:08 jasper Exp $
 .\"
 .\" Copyright (c) 2010 Marc Espie <espie@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: August 20 2010 $
+.Dd $Mdocdate: August 23 2010 $
 .Dt DPB 1
 .Os
 .Sh NAME
@@ -64,7 +64,7 @@ Clean port working directory and log before each build.
 The listing job is extra and won't be given back to the pool when it's
 finished.
 .It Fl h Ar hosts
-hosts to use for building.
+File with hosts to use for building.
 One host per line, plus properties, such as:
 .Bd -literal
 espie@aeryn jobs=4 arch=i386
