--- a/infrastructure/man/man1/check-conflicts.1
+++ b/infrastructure/man/man1/check-conflicts.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: check-conflicts.1,v 1.1 2010/08/20 14:09:59 espie Exp $
+.\"	$OpenBSD: check-conflicts.1,v 1.2 2010/09/03 18:51:19 schwarze Exp $
 .\"
 .\" Copyright (c) 2010 Marc Espie <espie@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: August 20 2010 $
+.Dd $Mdocdate: September 3 2010 $
 .Dt CHECK-CONFLICTS 1
 .Os
 .Sh NAME
@@ -78,6 +78,7 @@ in
 .It Fl p Ar portsdir
 Traverse the ports directory for packing-lists, using
 .Ar print-plist-all .
+.El
 .Sh SEE ALSO
 .Xr pkg_add 1 ,
 .Xr pkg_create 1 ,
