--- a/infrastructure/man/man1/check-lib-depends.1
+++ b/infrastructure/man/man1/check-lib-depends.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: check-lib-depends.1,v 1.2 2010/08/20 17:03:36 espie Exp $
+.\"	$OpenBSD: check-lib-depends.1,v 1.3 2010/09/03 18:51:19 schwarze Exp $
 .\"
 .\" Copyright (c) 2010 Marc Espie <espie@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: August 20 2010 $
+.Dd $Mdocdate: September 3 2010 $
 .Dt CHECK-LIB-DEPENDS 1
 .Os
 .Sh NAME
@@ -63,7 +63,7 @@ The options are as follows:
 .It Fl B Ar destdir
 scan files under
 .Ar destdir .
-.If Fl d Ar pkgrepo
+.It Fl d Ar pkgrepo
 look for all needed packages under directory
 .Ar pkgrepo .
 .It Fl f
