--- a/infrastructure/man/man1/pkg_subst.1
+++ b/infrastructure/man/man1/pkg_subst.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pkg_subst.1,v 1.2 2010/08/20 15:16:07 espie Exp $
+.\"	$OpenBSD: pkg_subst.1,v 1.3 2010/09/03 18:51:19 schwarze Exp $
 .\"
 .\" Copyright (c) 2010 Marc Espie <espie@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: August 20 2010 $
+.Dd $Mdocdate: September 3 2010 $
 .Dt PKG_SUBST 1
 .Os
 .Sh NAME
@@ -87,7 +87,6 @@ each
 is backed up as
 .Ar file.beforesubst
 before the substitution occurs.
-
 .Sh SEE ALSO
 .Xr pkg_create 1 ,
 .Xr install 1 .
