--- a/infrastructure/man/man1/resolve-lib.1
+++ b/infrastructure/man/man1/resolve-lib.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: resolve-lib.1,v 1.1 2010/09/08 14:52:27 espie Exp $
+.\"	$OpenBSD: resolve-lib.1,v 1.3 2010/09/09 19:17:06 jasper Exp $
 .\"
 .\" Copyright (c) 2010 Marc Espie <espie@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 8 2010 $
+.Dd $Mdocdate: September 9 2010 $
 .Dt RESOLVE-LIB 1
 .Os
 .Sh NAME
@@ -29,7 +29,7 @@
 resolve library specs against a list of installed libraries.
 .Nm
 takes a list of file names with full path on stdin,
-and matches each library 
+and matches each library
 .Ar spec
 against those libraries,
 using
@@ -52,8 +52,8 @@ see
 .Pp
 Each
 .Ar spec
-not found will result in an error message and exit.
-.Nm
-If option
+not found will result in an error message and exit code.
+.Pp
+If the option
 .Fl noshared
 is used, shared libraries will be ignored.
