--- a/infrastructure/man/man1/check-lib-depends.1
+++ b/infrastructure/man/man1/check-lib-depends.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: check-lib-depends.1,v 1.3 2010/09/03 18:51:19 schwarze Exp $
+.\"	$OpenBSD: check-lib-depends.1,v 1.4 2010/09/09 19:17:06 jasper Exp $
 .\"
 .\" Copyright (c) 2010 Marc Espie <espie@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 3 2010 $
+.Dd $Mdocdate: September 9 2010 $
 .Dt CHECK-LIB-DEPENDS 1
 .Os
 .Sh NAME
@@ -61,30 +61,33 @@ and report problems.
 The options are as follows:
 .Bl -tag -width keyword
 .It Fl B Ar destdir
-scan files under
+Scan files under
 .Ar destdir .
 .It Fl d Ar pkgrepo
-look for all needed packages under directory
+Look for all needed packages under directory
 .Ar pkgrepo .
 .It Fl f
-give full reports of every file that requires a missing library.
+Give full reports of every file that requires a missing library.
 .It Fl m
-always show progress-meter, even if not run from terminal.
+Always show progress-meter, even if not run from terminal.
 .It Fl o
-scan binaries using
+Scan binaries using
 .Xr ldd 1 ,
-which also works for old a.out binaries,
-instead of
+which also works for old
+.Xr a.out 5
+binaries, instead of
 .Xr objdump 1 ,
-which only works for ELF.
+which only works for
+.Xr elf 5
+binaries.
 .It Fl O Ar dest
-save result of first stage in file
+Save result of first stage in file
 .Ar dest .
 .It Fl s Ar src
-do not scan, directly read result of first stage from file
+Don't scan, directly read result of first stage from file
 .Ar src .
 .It Fl x
-don't show progress-meter, even if run from terminal.
+Don't show progress-meter, even if run from terminal.
 .El
 .Pp
 If no
@@ -96,4 +99,6 @@ to other options.
 .Sh SEE ALSO
 .Xr ldd 1 ,
 .Xr objdump 1 ,
-.Xr bsd.port.mk 5
+.Xr a.out 5 ,
+.Xr bsd.port.mk 5 ,
+.Xr elf 5
