--- a/infrastructure/man/man1/dolock.1
+++ b/infrastructure/man/man1/dolock.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dolock.1,v 1.1 2010/09/08 14:52:27 espie Exp $
+.\"	$OpenBSD: dolock.1,v 1.2 2010/09/09 05:40:41 jasper Exp $
 .\"
 .\" Copyright (c) 2010 Marc Espie <espie@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 8 2010 $
+.Dd $Mdocdate: September 9 2010 $
 .Dt DOLOCK 1
 .Os
 .Sh NAME
@@ -25,7 +25,7 @@
 .Ar lockname
 .Sh DESCRIPTION
 .Nm
-create a lock named
+creates a lock named
 .Ar lockname
 using
 .Xr open 2 .
