--- a/infrastructure/man/man1/pkg_subst.1
+++ b/infrastructure/man/man1/pkg_subst.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pkg_subst.1,v 1.3 2010/09/03 18:51:19 schwarze Exp $
+.\"	$OpenBSD: pkg_subst.1,v 1.4 2010/09/09 19:17:06 jasper Exp $
 .\"
 .\" Copyright (c) 2010 Marc Espie <espie@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 3 2010 $
+.Dd $Mdocdate: September 9 2010 $
 .Dt PKG_SUBST 1
 .Os
 .Sh NAME
@@ -44,7 +44,7 @@ options.
 The options are as follows
 .Bl -tag -width Dname=valuexxx
 .It Fl c
-copy and substitute.
+Copy and substitute.
 Number of
 .Ar file
 arguments must be even.
@@ -67,10 +67,10 @@ Define
 to
 .Ar value .
 .It Fl g Ar group
-change group of destination file to
+Change group of destination file to
 .Ar group .
 .It Fl u Ar owner
-change owner of destination file to
+Change owner of destination file to
 .Ar owner .
 .El
 .Pp
