--- a/infrastructure/man/man1/register-plist.1
+++ b/infrastructure/man/man1/register-plist.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: register-plist.1,v 1.1 2010/08/20 14:22:00 espie Exp $
+.\"	$OpenBSD: register-plist.1,v 1.2 2010/09/09 19:17:06 jasper Exp $
 .\"
 .\" Copyright (c) 2010 Marc Espie <espie@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: August 20 2010 $
+.Dd $Mdocdate: September 9 2010 $
 .Dt REGISTER-PLIST 1
 .Os
 .Sh NAME
@@ -34,7 +34,7 @@ is used to check that a packing-list for a given package name doesn't change.
 Package names (package stem plus version) are used to uniquely identify
 packages.
 When something in the package changes, the package name should change,
-usually by advancing
+usually by increasing
 .Ev REVISION .
 .Pp
 .Nm
@@ -55,7 +55,7 @@ Some items in the packing-list may change without actual problems.
 For instance, dependencies are allowed to go forward.
 On the other hand, some items like the package DESCR can't change at all.
 Since this is a generated file, porters often overlook that items such as
-the HOMEPAGE or the MAINTAINER's email address are embedded in that file,
+the HOMEPAGE or the MAINTAINER's email address are embedded into that file,
 and thus that changing these requires a REVISION bump.
 .Pp
 .Nm
