--- a/comms/hylafax/pkg/README
+++ b/comms/hylafax/pkg/README
@@ -1,4 +1,4 @@
-$OpenBSD: README,v 1.4 2010/11/29 22:33:11 jasper Exp $
+$OpenBSD: README,v 1.5 2011/05/24 16:24:35 giovanni Exp $
 
 Running Hylafax on OpenBSD
 ==========================
@@ -14,13 +14,6 @@ Make sure that you have configured HylaFAX before running faxq:
 
 When you are asked to specify the name of tty device, use a tty device
 existing on your architecture instead of "ttyd1".
-
-To start, add the following to /etc/rc.local:
-if [ -x ${TRUEPREFIX}/sbin/faxq ]; then 
-	${TRUEPREFIX}/sbin/hfaxd -i hylafax
-	${TRUEPREFIX}/sbin/faxq
-	echo -n ' hylafax' 
-fi
 
 For accepting incoming FAX/data calls, modify /etc/ttys(5) to contain
 something like this:
