--- a/infrastructure/man/man1/pkg_subst.1
+++ b/infrastructure/man/man1/pkg_subst.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pkg_subst.1,v 1.4 2010/09/09 19:17:06 jasper Exp $
+.\"	$OpenBSD: pkg_subst.1,v 1.5 2011/07/25 07:58:55 ajacoutot Exp $
 .\"
 .\" Copyright (c) 2010 Marc Espie <espie@openbsd.org>
 .\"
@@ -14,14 +14,14 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 9 2010 $
+.Dd $Mdocdate: July 25 2011 $
 .Dt PKG_SUBST 1
 .Os
 .Sh NAME
 .Nm pkg_subst
 .Nd substitute variables' values in files
 .Sh SYNOPSIS
-.Nm pkg-subst
+.Nm pkg_subst
 .Op Fl c
 .Oo Fl D Ar name
 .Ns Oo Ns = Ns Ar value
